--- a/CSS/main.css
+++ b/CSS/main.css
@@ -114,7 +114,7 @@ ul li a {
 }
 
 .img-principal {
-    max-width: 100vw;
+    max-width: 98.7vw;
 }
 
 .section-index-1 {
@@ -213,6 +213,13 @@ ul li a {
     flex-direction: column;
     flex-wrap: wrap;
     padding-left: 50px;
+}
+
+.hover-img-productos:hover {
+    transform: scale(1.3);
+    transition-property: all;
+    transition-duration: 2s;
+    transition-timing-function: ease;
 }
 
                     /* NOVEDADES */
@@ -317,8 +324,28 @@ nav ul {
 .imgs-productos {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-around; 
 }
+
+
+.hover-img-productos:hover {
+    transform: scale(1.3);
+    transition-property: all;
+    transition-duration: 2s;
+    transition-timing-function: ease;
+}
+
+    /* transition-property: all;
+    transition-duration: .3s;
+    transition-timing-function: ease;
+}
+.imgs-productos img:hover {
+    transform: scale(1);
+}
+
+.imgs-productos:hover {
+    transform: scale(1);
+} */
 
             /* -------- CONTACTO  ------- */
 
