--- a/CSS/main.css
+++ b/CSS/main.css
@@ -31,6 +31,41 @@
   font-weight: 900;
   font-size: 2,5 rem; }
 
+/* ----- INDEX ------- */
+.section-index-2 {
+  background-color: #f19288;
+  padding: 20px; }
+  .section-index-2 div {
+    display: flex;
+    justify-content: end;
+    align-items: flex-end; }
+  .section-index-2 img {
+    height: 200px;
+    width: 200px;
+    animation-name: jirafita;
+    animation-duration: 1.5s;
+    animation-timing-function: ease-in-out;
+    position: absolute; }
+
+@keyframes jirafita {
+  0% {
+    transform: translateX(200px);
+    opacity: 0; }
+  100% {
+    transform: translateX(0px);
+    opacity: 1; } }
+
+.section-index-3 {
+  background-color: #eebc5c;
+  text-align: center;
+  font-size: 20px;
+  padding: 20px;
+  font-family: ui-serif; }
+  .section-index-3 p {
+    text-align: center;
+    font-size: 22px;
+    font-family: ui-serif; }
+
 /* ------ Body id ------ */
 #body {
   background-color: #eebc5c;
@@ -54,56 +89,6 @@
   text-align: center;
   background-color: #f95f5f99;
   cursor: pointer !important; }
-
-/* ----- INDEX ------- */
-.section-index-2 {
-  background-color: #f19288;
-  padding: 20px; }
-
-.section-index-3 {
-  background-color: #eebc5c;
-  text-align: center;
-  font-size: 20px;
-  padding: 20px;
-  font-family: ui-serif; }
-  .section-index-3 p {
-    text-align: center;
-    font-size: 22px;
-    height: 250px;
-    font-family: ui-serif; }
-
-/* ------ Biografía ------- */
-.parrafo-bio {
-  text-align: center;
-  font-size: 20px;
-  color: black;
-  padding: 2px; }
-
-.imgs-bio {
-  display: flex;
-  flex-flow: column;
-  gap: 20px; }
-  .imgs-bio .img-bio-1 {
-    max-height: 80vh; }
-    .imgs-bio .img-bio-1 .img-bio-2 {
-      max-height: 80vh; }
-
-/* ------- CONTACTO ------ */
-.section-contacto {
-  display: grid;
-  background-color: #eb6364; }
-
-.form {
-  display: flex;
-  justify-content: center;
-  padding: 20px;
-  background-color: white; }
-  .form .form-div {
-    display: grid;
-    justify-content: center; }
-
-.titulos-contacto {
-  text-align: center; }
 
 /* ------ PRODUCTOS ------- */
 .section-productos {
