--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,38 +6,13 @@
 }
 
 @import "variables";
+@import "caracteristicas-generales";
+@import "index";
+@import "productos";
+@import "sobre-mi";
+@import "contacto;";
+@import "footer";
 
-            /* Características Generales (títulos,párrafos,span) */
-
-.encabezados-primarios {
-    text-align: $encabezados-align;
-    font-family: "KingsmanDemo.ttf";
-    font-size: $encabezados-size;
-    color: $encabezados-color;
-    padding: $encabezados-padding;
-}
-
-.encabezados-secundarios {
-    color: $encabezados-color;
-    text-align: $encabezados-align;
-    font-family: "KingsmanDemo.ttf";
-    font-size: $encabezados-size;
-    padding: $encabezados-padding;
-}
-
-.subtitulos {
-    text-align: $encabezados-align;
-    font-family: "KingsmanDemo.ttf";
-    font-size: $encabezados-size;
-    color: white;
-}
-
-.span-textos {
-    font-family: "KingsmanDemo.ttf";
-    color: white;
-    font-weight: 900;
-    font-size: 2,5 rem;
-}
 
             /* ------ Body id ------ */
 #body {
@@ -62,139 +37,10 @@
     border-radius: 10px;
     margin: 2px;
     padding: 4px;
-    text-align: center;
+    text-align: $encabezados-align;
     background-color: #f95f5f99;
     cursor: pointer !important;
 }
-
-
-            /* ----- INDEX ------- */
-
-.section-index-2 {
-    background-color: #f19288;
-    padding:20px;
-}
-
-.section-index-3 {
-    background-color: #eebc5c;
-    text-align: center;
-    font-size: 20px;
-    padding: 20px;
-    font-family: ui-serif;
-        p {
-            text-align: center;
-            font-size: 22px;
-            height: 250px;
-            font-family: ui-serif;
-    }
-    
-}
-
-
-                        /* ------ Biografía ------- */             
-
-.parrafo-bio {
-    text-align: center;
-    font-size: 20px;
-    color: black;
-    padding: 2px;
-}
-
-.imgs-bio {
-    display: flex;
-    flex-flow: column;
-    gap: 20px;
-
-        .img-bio-1 {
-            max-height: 80vh;
-
-            .img-bio-2 {
-                max-height: 80vh;
-            }
-        }
-}
-
-                        /* ------- CONTACTO ------ */
-
-.section-contacto {
-    display:grid;
-    background-color: #eb6364;
-}
-
-.form {
-    display: flex;
-    justify-content: center;
-    padding: 20px;
-    background-color: white;
-
-        .form-div {
-            display: grid;
-            justify-content: center;
-        }
-}
-
-.titulos-contacto {
-    text-align: center;
-}
-
-            /* ------ PRODUCTOS ------- */
-
-.section-productos {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    padding-left: 50px;            
-
-    .imgs-productos {
-        display: flex;
-        flex-wrap: wrap; 
-        justify-content: space-around; 
-        gap: 20px;
-
-        .hover-img-productos:hover {
-            transform: scale(1.3);
-            transition-property: all;
-            transition-duration: 2s;
-            transition-timing-function: ease;
-        }
-    }
-}
-
-                        /* ------ NOVEDADES ------ */
-
-.section-novedades {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    align-items: center;
-    background-color: #eebc5c;
-}
-
-            /* ------ FOOTER ------ */ 
-
-.footer {
-    display: flex;
-    background-color: white;
-    padding: 10px;
-    justify-content: center;
-    height: 155px;
-
-    .footer-div {
-        display:flex;
-        flex-direction: column;
-        align-items: center;
-    }
-        .footer-iconos a img{
-            width: 50px;
-            height: 50px;
-        }
-            .p-footer {
-            text-align: center;
-            padding: 20px;
-            font-size: 12px;
-            }
-        }
 
     /* ------------ Media Queries ------------ */
 
@@ -208,7 +54,7 @@ max-width: 100vw;
 }
 
 .parrafo-index {
-text-align: center;
+text-align: $encabezados-align;
 font-size: 40px;
 height: 250px;
 }
@@ -216,14 +62,14 @@ height: 250px;
 
 .section-index-3 {
 background-color: #eebc5c;
-text-align: center;
+text-align: $encabezados-align;
 font-size: 30px;
 padding: 20px;
 }
 
     /* ----SOBRE MÍ ---- */
 .parrafo-bio {
-text-align: center;
+text-align: $encabezados-align;
 font-size: 35px;
 color: black;
 }
@@ -337,7 +183,7 @@ max-width: 100vw;
 }
 
 .parrafo-index {
-text-align: center;
+text-align: $encabezados-align;
 font-size: 35px;
 height: 250px;
 }
@@ -345,14 +191,14 @@ height: 250px;
 
 .section-index-3 {
 background-color: #eebc5c;
-text-align: center;
+text-align: $encabezados-align;
 font-size: 25px;
 padding: 20px;
 }
 
     /* ----SOBRE MÍ ---- */
 .parrafo-bio {
-text-align: center;
+text-align: $encabezados-align;
 font-size: 35px;
 color: black;
 }
