--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -1,6 +1,6 @@
-// Agrego una sola variable para probar, pero luego iré agregando más, voy a hacer toda la página con SASS//
+// Variables
 
 $encabezados-size: 4rem;
-$encabezados-color: color black;
-$encabezados-padding: padding 10px;
-$encabezados-align: center;
+$encabezados-color: black;
+$alignments: center;
+$spacing: 10px;
