--- a/CSS/main.css
+++ b/CSS/main.css
@@ -9,15 +9,15 @@
   text-align: center;
   font-family: "KingsmanDemo.ttf";
   font-size: 4rem;
-  color: color black;
-  padding: padding 10px; }
+  color: black;
+  padding: 10px; }
 
 .encabezados-secundarios {
-  color: color black;
+  color: black;
   text-align: center;
   font-family: "KingsmanDemo.ttf";
   font-size: 4rem;
-  padding: padding 10px; }
+  padding: 10px; }
 
 .subtitulos {
   text-align: center;
@@ -66,6 +66,74 @@
     font-size: 22px;
     font-family: ui-serif; }
 
+/* ------ PRODUCTOS ------- */
+.section-productos {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  padding-left: 50px; }
+  .section-productos .imgs-productos {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    gap: 20px; }
+    .section-productos .imgs-productos .hover-img-productos:hover {
+      transform: scale(1.3);
+      transition-property: all;
+      transition-duration: 2s;
+      transition-timing-function: ease; }
+
+/* ------ Biografía ------- */
+.parrafo-bio {
+  text-align: center;
+  font-size: 20px;
+  color: black;
+  padding: 2px; }
+  .parrafo-bio .imgs-bio {
+    display: flex;
+    flex-flow: column;
+    gap: 20px; }
+    .parrafo-bio .imgs-bio .img-bio-1 {
+      max-height: 80vh; }
+      .parrafo-bio .imgs-bio .img-bio-1 .img-bio-2 {
+        max-height: 80vh; }
+
+/* ------- CONTACTO ------ */
+.section-contacto {
+  display: grid;
+  background-color: #eb6364; }
+
+.form {
+  display: flex;
+  justify-content: center;
+  padding: 20px;
+  background-color: white; }
+  .form .form-div {
+    display: grid;
+    justify-content: center; }
+
+.titulos-contacto {
+  text-align: center; }
+
+/* ------ FOOTER ------ */
+.footer {
+  display: flex;
+  background-color: white;
+  padding: 10px;
+  justify-content: center;
+  height: 155px; }
+  .footer .footer-div {
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+  .footer .footer-iconos a img {
+    width: 50px;
+    height: 50px; }
+  .footer .p-footer {
+    text-align: center;
+    padding: 20px;
+    font-size: 12px; }
+
 /* ------ Body id ------ */
 #body {
   background-color: #eebc5c;
@@ -89,51 +157,6 @@
   text-align: center;
   background-color: #f95f5f99;
   cursor: pointer !important; }
-
-/* ------ PRODUCTOS ------- */
-.section-productos {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  padding-left: 50px; }
-  .section-productos .imgs-productos {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    gap: 20px; }
-    .section-productos .imgs-productos .hover-img-productos:hover {
-      transform: scale(1.3);
-      transition-property: all;
-      transition-duration: 2s;
-      transition-timing-function: ease; }
-
-/* ------ NOVEDADES ------ */
-.section-novedades {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  flex-wrap: wrap;
-  align-items: center;
-  background-color: #eebc5c; }
-
-/* ------ FOOTER ------ */
-.footer {
-  display: flex;
-  background-color: white;
-  padding: 10px;
-  justify-content: center;
-  height: 155px; }
-  .footer .footer-div {
-    display: flex;
-    flex-direction: column;
-    align-items: center; }
-  .footer .footer-iconos a img {
-    width: 50px;
-    height: 50px; }
-  .footer .p-footer {
-    text-align: center;
-    padding: 20px;
-    font-size: 12px; }
 
 /* ------------ Media Queries ------------ */
 @media screen and (min-width: 768px) {
