--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -3,7 +3,7 @@
 .footer {
     display: flex;
     background-color: white;
-    padding: 10px;
+    padding: $spacing;
     justify-content: center;
     height: 155px;
         .footer-div {
@@ -16,8 +16,8 @@
                 height: 50px;
                 }
                 .p-footer {
-                    text-align: center;
-                    padding: 20px;
+                    text-align: $alignments;
+                    padding: $spacing*2;
                     font-size: 12px;
                     }
 }
