--- a/scss/novedades.scss
+++ b/scss/novedades.scss
@@ -5,6 +5,6 @@
     flex-direction: row;
     justify-content: space-around;
     flex-wrap: wrap;
-    align-items: center;
+    align-items: $alignments;
     background-color: #eebc5c;
 }
