Trabajo día 31/5 - reestructuración y corrección

--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -17,7 +17,7 @@
                 }
                 .p-footer {
                     text-align: $alignments;
-                    padding: $spacing*2;
-                    font-size: 12px;
+                    padding: $spacing;
+                    font-size: 15px;
                     }
 }
