--- a/CSS/main.css
+++ b/CSS/main.css
@@ -63,17 +63,19 @@ padding10 {
 
 /* ----- INDEX ------- */
 .section-index-2 {
-  background-color: #f19288;
-  padding: 20px; }
+  background-color: #fdb87e;
+  padding: 25px;
+  text-align: center;
+  font-size: 25px; }
   .section-index-2 div {
     display: flex;
     justify-content: end;
     align-items: flex-end; }
   .section-index-2 img {
-    height: 200px;
-    width: 200px;
+    height: 150px;
+    width: 150px;
     animation-name: jirafita;
-    animation-duration: 1.5s;
+    animation-duration: 0.8s;
     animation-timing-function: ease-in-out;
     position: absolute; }
 
@@ -85,23 +87,20 @@ padding10 {
     transform: translateX(0px);
     opacity: 1; } }
 
-.section-index-3 {
+.section-index-3 p {
   background-color: #eebc5c;
   text-align: center;
-  font-size: 20px;
+  font-size: 18px;
   padding: 20px;
   font-family: ui-serif; }
-  .section-index-3 p {
-    text-align: center;
-    font-size: 22px;
-    font-family: ui-serif; }
 
 /* ------ PRODUCTOS ------- */
 .section-productos {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  padding-left: 50px; }
+  padding-left: 50px;
+  padding: 30px; }
   .section-productos .imgs-productos {
     display: flex;
     flex-wrap: wrap;
@@ -116,17 +115,26 @@ padding10 {
 /* ------ Biografía ------- */
 .parrafo-bio {
   text-align: center;
-  font-size: 20px;
+  font-size: 18px;
   color: black;
-  padding: 2px; }
-  .parrafo-bio .imgs-bio {
-    display: flex;
-    flex-flow: column;
-    gap: 20px; }
-    .parrafo-bio .imgs-bio .img-bio-1 {
-      max-height: 80vh; }
-      .parrafo-bio .imgs-bio .img-bio-1 .img-bio-2 {
-        max-height: 80vh; }
+  padding: 15px; }
+
+.imgs-bio {
+  display: flex;
+  flex-flow: column;
+  gap: 20px; }
+
+.section-2-bio {
+  background-color: #fdb87e; }
+
+.section-1-bio {
+  background-color: #fdb87e; }
+
+.img-bio-1 {
+  padding: 15px; }
+
+.img-bio-2 {
+  padding: 15px; }
 
 /* ------- CONTACTO ------ */
 .section-contacto {
@@ -161,8 +169,8 @@ padding10 {
     height: 50px; }
   .footer .p-footer {
     text-align: center;
-    padding: 20px;
-    font-size: 12px; }
+    padding: 10px;
+    font-size: 15px; }
 
 /* ------ Body id ------ */
 #body {
@@ -191,17 +199,30 @@ padding10 {
 /* ------------ Media Queries ------------ */
 @media screen and (min-width: 768px) {
   /* --- INDEX ---  */
-  .img-principal {
-    max-width: 100vw; }
+  .section-index-1 div img {
+    height: 70vh !important; }
+  .section-index-2 {
+    padding: 27px; }
+    .section-index-2 img {
+      height: 170px;
+      width: 170px; }
+  @keyframes jirafita {
+    0% {
+      transform: translateX(200px);
+      opacity: 0; }
+    100% {
+      transform: translateX(0px);
+      opacity: 1; } }
   .parrafo-index {
     text-align: center;
     font-size: 40px;
     height: 250px; }
   .section-index-3 {
     background-color: #eebc5c;
-    text-align: center;
-    font-size: 30px;
     padding: 20px; }
+    .section-index-3 p {
+      text-align: center;
+      font-size: 30px; }
   /* ----SOBRE MÍ ---- */
   .parrafo-bio {
     text-align: center;
@@ -213,11 +234,13 @@ padding10 {
     justify-content: space-around;
     padding-bottom: 40px; }
   .img-bio-1 {
-    max-width: 100vh;
-    max-height: 80vh; }
+    max-width: 56vh;
+    max-height: 75vh;
+    padding: 15px; }
   .img-bio-2 {
-    max-width: 100vh;
-    max-height: 80vh; }
+    max-width: 56vh;
+    max-height: 75vh;
+    padding: 20px; }
   /* ----- PRODUCTOS ------ */
   .section-productos {
     display: flex;
@@ -267,40 +290,41 @@ padding10 {
     .footer .footer-iconos {
       padding: 20px; }
     .footer .footer-iconos a img {
-      width: 100px;
-      height: 100px; }
-    .footer .p-footer {
-      font-size: 18px; } }
+      width: 80px;
+      height: 80px; } }
 
-@media (min-width: 576px) and (max-width: 992px) {
+@media screen and (min-width: 576px) and (max-width: 992px) {
   /* --- INDEX ---  */
-  .img-principal {
-    max-width: 100vw; }
+  .section-index-1 div img {
+    height: 50vh !important; }
   .parrafo-index {
     text-align: center;
     font-size: 35px;
     height: 250px; }
+  .section-index-2 p {
+    font-size: 30px; }
   .section-index-3 {
     background-color: #eebc5c;
-    text-align: center;
-    font-size: 25px;
     padding: 20px; }
+    .section-index-3 p {
+      text-align: center;
+      font-size: 20px; }
   /* ----SOBRE MÍ ---- */
   .parrafo-bio {
     text-align: center;
-    font-size: 35px;
+    font-size: 25px;
     color: black; }
   .imgs-bio {
     display: flex;
-    flex-flow: row;
-    justify-content: space-around;
+    flex-flow: column;
+    align-items: center !important;
     padding-bottom: 40px; }
-  .img-bio-1 {
-    max-width: 100vh;
-    max-height: 80vh; }
-  .img-bio-2 {
-    max-width: 100vh;
-    max-height: 80vh; }
+  .imgs-bio-1 {
+    max-width: 43vw;
+    max-height: 63vh; }
+  .imgs-bio-2 {
+    max-width: 43vw;
+    max-height: 63vh; }
   /* ----- PRODUCTOS ------ */
   .section-productos {
     display: flex;
@@ -341,8 +365,47 @@ padding10 {
     display: flex;
     flex-direction: row; }
   .footer-iconos a img {
-    width: 75px;
-    height: 75px; }
+    width: 60px !important;
+    height: 60px !important; }
   .p-footer {
-    font-size: 15px; }
-  /* ----- FINAL MEDIA QUERIES ------ */ }
+    text-align: center;
+    padding: 12px !important;
+    font-size: 20px; } }
+
+@media (min-width: 992px) and (max-width: 1800px) {
+  /* ----PRODUCTOS----- */
+  .section-productos {
+    padding: 20px; }
+  /* ----FOOTER----- */
+  .footer {
+    display: flex;
+    background-color: white;
+    padding: 20px;
+    justify-content: center;
+    height: 210px; }
+    .footer .footer-div {
+      display: flex;
+      flex-direction: column;
+      align-items: center; }
+    .footer .footer-iconos a img {
+      width: 90px;
+      height: 90px; }
+    .footer .p-footer {
+      text-align: center;
+      padding: 5px;
+      font-size: 20px; }
+  /* -----Biografía----- */
+  .parrafo-bio {
+    font-size: 25px; }
+  .imgs-bio {
+    display: flex;
+    flex-flow: row;
+    gap: 20px; }
+  .img-bio-1 {
+    height: 63vh;
+    width: 46vw;
+    padding: 15px; }
+  .img-bio-2 {
+    height: 63vh;
+    width: 46vw;
+    padding: 15px; } }
