--- a/scss/productos.scss
+++ b/scss/productos.scss
@@ -4,7 +4,8 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    padding-left: 50px;            
+    padding-left: 50px;         
+    padding: 30px;   
 
     .imgs-productos {
         display: flex;
